fix social link sizing on mobile on eigenstateblue.html

--- a/CSS/eigenstateblue.css
+++ b/CSS/eigenstateblue.css
@@ -215,7 +215,9 @@
     .social-link {
         width: 100%;
         max-width: 300px;
+        min-width: 0;
         justify-content: center;
+        box-sizing: border-box;
     }
 
     .track-item {
